objects/Forecast_Target__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Headcount__c</fullName>
        <label>Actual Headcount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Channel_Target__c</fullName>
        <label>Alternate Channel Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Center_Expense_Target__c</fullName>
        <label>Cost Center Expense Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_From_New_Bookings_Target__c</fullName>
        <label>Cash From New Bookings Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Expense_Forecast__c</fullName>
        <label>Cost Center Expense Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_adjustment_to_Dollar_Forecast__c</fullName>
        <label>FX adjustment to Dollar Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_to_Adjustment_Doller_Target__c</fullName>
        <label>FX to Adjustment Dollar Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_Target__c</fullName>
        <label>Hardware Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeadCount_Target__c</fullName>
        <label>Head Count Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headcount_Forecast__c</fullName>
        <label>Headcount Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Revenue_Target__c</fullName>
        <description>Holds revenue target for IP.</description>
        <label>IP Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Royalty_Revenue_Target__c</fullName>
        <description>Holds revenue for IP Royalty.</description>
        <label>IP Royalty Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Royalty_Target__c</fullName>
        <label>IP Royalty Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Target__c</fullName>
        <label>IP Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Tensilica_Revenue_Target__c</fullName>
        <description>Holds revenue target for IP Tensilica.</description>
        <label>IP - Tensilica Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Tensilica_Royalty_Revenue_Target__c</fullName>
        <description>Holds revenue target for IP Tensilica Royalty.</description>
        <label>IP - Tensilica Royalty Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Tensilica_Royalty_Target__c</fullName>
        <label>IP - Tensilica Royalty Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Tensilica_Target__c</fullName>
        <label>IP - Tensilica Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_Name__c</fullName>
        <description>Holds level name of forecast hierarchy.</description>
        <inlineHelpText>Specify level name of forecast hierarchy.</inlineHelpText>
        <label>Level Name</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>NA FOCUS RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA GEO RVP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maint_HW_Target__c</fullName>
        <label>Maintenance Hardware Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_SW_Target__c</fullName>
        <label>Maintenance Software Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_HW_Target__c</fullName>
        <label>Product Hardware Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_SW_Target__c</fullName>
        <label>Product Software Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quarter</label>
        <referenceTo>Expected_Close_Quarter__c</referenceTo>
        <relationshipLabel>Forecast Targets</relationshipLabel>
        <relationshipName>Forecast_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Pass_Through_Target__c</fullName>
        <label>Services Pass Through Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Revenue_Target__c</fullName>
        <label>Services Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Target__c</fullName>
        <label>Services Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Target__c</fullName>
        <label>Software Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bookings_Target__c</fullName>
        <formula>Hardware_Target__c + IP_Target__c + Services_Target__c + Software_Target__c + Alternate_Channel_Target__c + IP_Royalty_Target__c +  IP_Tensilica_Target__c + IP_Tensilica_Royalty_Target__c + VIP_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bookings Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Operating_Expenses_Target__c</fullName>
        <formula>Cash_Center_Expense_Target__c + FX_to_Adjustment_Doller_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Operating Expenses Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Operating_Expenses__c</fullName>
        <formula>Cost_Center_Expense_Forecast__c + FX_adjustment_to_Dollar_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Operating Expense Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Target__c</fullName>
        <formula>Product_HW_Target__c + Product_SW_Target__c + Services_Pass_Through_Target__c + Services_Revenue_Target__c + Maint_HW_Target__c + Maint_SW_Target__c + IP_Revenue_Target__c +
IP_Royalty_Revenue_Target__c + IP_Tensilica_Revenue_Target__c + IP_Tensilica_Royalty_Revenue_Target__c + VIP_Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Revenue_Target__c</fullName>
        <label>VIP Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Target__c</fullName>
        <label>VIP Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forecast Target</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Quarter__c</columns>
        <columns>Region__c</columns>
        <columns>Hardware_Target__c</columns>
        <columns>IP_Target__c</columns>
        <columns>HeadCount_Target__c</columns>
        <columns>Maint_HW_Target__c</columns>
        <columns>Maint_SW_Target__c</columns>
        <columns>Product_HW_Target__c</columns>
        <columns>Product_SW_Target__c</columns>
        <columns>Services_Target__c</columns>
        <columns>Software_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>Operations</role>
            <role>WWSF</role>
            <role>WWSF_Proxy</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Forecast_Targets</fullName>
        <columns>NAME</columns>
        <columns>Quarter__c</columns>
        <columns>Region__c</columns>
        <columns>Software_Target__c</columns>
        <columns>Hardware_Target__c</columns>
        <columns>VIP_Target__c</columns>
        <columns>IP_Target__c</columns>
        <columns>IP_Tensilica_Target__c</columns>
        <columns>Services_Target__c</columns>
        <columns>HeadCount_Target__c</columns>
        <columns>Maint_HW_Target__c</columns>
        <columns>Maint_SW_Target__c</columns>
        <columns>Product_HW_Target__c</columns>
        <columns>Product_SW_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quarter__c</field>
            <operation>contains</operation>
            <value>2016</value>
        </filters>
        <label>2016 Forecast Targets</label>
        <language>en_US</language>
        <sharedTo>
            <role>Sales_Finance</role>
            <role>WWSF</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Forecast Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>